docs: Set correct background color
Other than the sidebar, where we had already set
`background-color-base`, the site was using a VitePress color as
the background color, which was especially visible in dark mode
(the header and main content sections were a shade too light).
This patch sets VitePress's main background color token to
`background-color-base` to ensure that the background color is
correct everywhere.

--- a/packages/codex-docs/docs/.vitepress/theme/custom.css
+++ b/packages/codex-docs/docs/.vitepress/theme/custom.css
@@ -39,6 +39,7 @@
 	--vp-c-indigo: var( --color-progressive );
 	--vp-c-indigo-soft: var( --color-progressive--active );
 
+	--vp-c-bg: var( --background-color-base );
 	--vp-c-bg-alt: var( --background-color-interactive-subtle );
 
 	--vp-c-divider: var( --border-color-base );
